# Cheddar

./: HARDWARE.md  README.md
.github/instructions/: AGENTS.md
BlinkRGB/src/: BlinkRGB.cpp
MotionDriver/: .gitignore  MotionDriver.code-workspace  README.md  platformio.ini
MotionDriver/docs/: cli_help.txt
MotionDriver/include/: pins.h
MotionDriver/src/: main.cpp
PieBrain/: README.md  SSH_ACCESS.md  __init__.py  controller_mapping.py  device_detect.py  diagnose_uart.sh  justfile  requirements.txt  setup_rpi.sh  xbox_control.py
PieBrain/ChedWeb/: CAMERA_SETUP.md  DEPLOYMENT.md  GRAFANA_SETUP.md  INPUT_SYSTEM.md  METRICS.md  README.md  SETUP.md  TELEMETRY_IMPLEMENTATION.md  build-frontend.sh  config.alloy  grafana-dashboard-chedweb-backend.json  install_services.sh
PieBrain/ChedWeb/backend/: .env.example  .eslintrc.cjs  .gitignore  backend.service  camera.py  cheddar-backend.service  config.py  debug_hub.py  main.py  metrics.py  models.py  motion_driver_bridge.py  peer_manager.py  pyproject.toml  requirements.txt  setup.sh  test_awb.py
PieBrain/ChedWeb/backend/tests/: conftest.py  test_api.py  test_models.py  test_motion_driver_bridge.py  test_peer_manager.py
PieBrain/tests/: test_controller_mapping.py
ServoMotorDriver/: ServoMotorDriver.ino  motors.ino  serial_input.ino  servos.ino
cheddar_serial/: README.md  __init__.py  config.py  serial_bridge.py
docs/: README.md
sketch_sep16a/: sketch_sep16a.ino
webapp/: .env.example  .gitignore  README.md  __init__.py  config.py  justfile  main.py  requirements.txt  serial_bridge.py
webapp/static/: app.js  (+2 more)
(+42 files in other folders)
